* Fixed broken CSS since refactoring for staticpages

--- a/RobIII/css/main.less
+++ b/RobIII/css/main.less
@@ -205,12 +205,12 @@ a:focus {
     margin: 0;
 }
 
-#code ul {
+.code ul {
     list-style-type: none;
     padding: 0;
 }
 
-#code svg,
+.code svg,
 .contact-methods svg {
     vertical-align: middle;
 }
